--- a/.github/workflows/deploy-services.yml
+++ b/.github/workflows/deploy-services.yml
@@ -36,7 +36,7 @@ jobs:
               - 'build/**'
   analyze-deploy-status:
     runs-on: ubuntu-latest
-    needs: [detect-code-changes, analyze-persist-tags-status]
+    needs: [detect-code-changes]
     outputs:
       deploy-services: ${{ steps.deploy-services.outputs.deploy }}
     steps:
