--- a/.github/workflows/deploy-services.yml
+++ b/.github/workflows/deploy-services.yml
@@ -18,10 +18,28 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
 
+# https://github.com/actions/runner/issues/520
+# https://docs.github.com/en/actions/writing-workflows/choosing-what-your-workflow-does/store-information-in-variables#using-the-env-context-to-access-environment-variable-values
+# https://docs.github.com/en/actions/security-for-github-actions/security-guides/using-secrets-in-github-actions#using-secrets-in-a-workflow
+env:
+  DEPLOYMENT_ACTIVE: true
+
 jobs:
+  check-deployment-status:
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/master'
+    outputs:
+      enabled: ${{ steps.status.outputs.enabled }}
+    steps:
+      - name: Check deployment status
+        id: status
+        run: |
+          echo "enabled=${{ env.DEPLOYMENT_ACTIVE }}" >> $GITHUB_OUTPUT"
+
   backup-deployment-config:
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/master' && ${{ secrets.DEPLOY_ACTIVE == 'true' }}
+    needs: [check-deployment-status]
+    if: github.ref == 'refs/heads/master' && ${{ needs.check-deployment-status.outputs.enabled == 'true' }}
     steps:
       - name: Back-up deployment config
         uses: appleboy/ssh-action@v1.2.2
@@ -36,8 +54,8 @@ jobs:
 
   sync-deployment-configuration:
     runs-on: ubuntu-latest
-    needs: [backup-deployment-config]
-    if: github.ref == 'refs/heads/master' && ${{ secrets.DEPLOY_ACTIVE == 'true' }}
+    needs: [check-deployment-status, backup-deployment-config]
+    if: github.ref == 'refs/heads/master' && ${{ needs.check-deployment-status.outputs.enabled == 'true' }}
     steps:
       - uses: actions/checkout@v4
       - name: Substitute acme email
@@ -82,8 +100,8 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: [sync-deployment-configuration]
-    if: github.ref == 'refs/heads/master' && ${{ secrets.DEPLOY_ACTIVE == 'true' }}
+    needs: [check-deployment-status, sync-deployment-configuration]
+    if: github.ref == 'refs/heads/master' && ${{ needs.check-deployment-status.outputs.enabled == 'true' }}
     steps:
       - name: Deploy latest services version
         uses: appleboy/ssh-action@v1.2.2
@@ -96,8 +114,8 @@ jobs:
 
   clean-deployment-config-backup:
     runs-on: ubuntu-latest
-    needs: [deploy]
-    if: github.ref == 'refs/heads/master' && ${{ secrets.DEPLOY_ACTIVE == 'true' }}
+    needs: [check-deployment-status, deploy]
+    if: github.ref == 'refs/heads/master' && ${{ needs.check-deployment-status.outputs.enabled == 'true' }}
     steps:
       - name: Clean back-up of deployment config
         uses: appleboy/ssh-action@v1.2.2
